@@ -1,6 +1,10 @@
 case RUBY_PLATFORM
 when /darwin/
   ok = true
+when /mswin/, /mingw/
+  func = "GetProcessMemoryInfo(0, 0, 0)"
+  hdr = "psapi.h"
+  ok = have_func(func, hdr) || have_library("psapi", func, hdr)
 end
 
 if ok
